2007-04-12  Deneb Meketa  <dmeketa@adobe.com>

        Reviewed by Darin Adler.

        http://bugs.webkit.org/show_bug.cgi?id=13029
        rdar://problem/4994849
        Bug 13029: Permit NPAPI plug-ins to see HTTP response headers.

        * Plugins/WebBaseNetscapePluginStream.h: declarations.
        * Plugins/WebBaseNetscapePluginStream.mm: main implementation.
        (-[WebBaseNetscapePluginStream dealloc]): cleanup.
        (-[WebBaseNetscapePluginStream finalize]): cleanup.
        (-[WebBaseNetscapePluginStream startStreamResponseURL:expectedContentLength:lastModifiedDate:MIMEType:headers:]):
        Pass headers along.
        (-[WebBaseNetscapePluginStream startStreamWithResponse:]):
        Main work is here.  Extract headers from NSHTTPURLResponse object into a byte sequence.
        See comments here about how it would be nice to have low-level access to the HTTP response.
        (-[WebBaseNetscapePluginStream _destroyStream]): cleanup.
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView evaluateJavaScriptPluginRequest:]):
        Conform to new startStream params.  Not applicable here, pass nil.

2007-04-12  Brady Eidson  <beidson@apple.com>

        Build fix for case sensitive file systems

        * Misc/WebNSPasteboardExtras.mm:
        * WebCoreSupport/WebPasteboardHelper.mm:

2007-04-11  John Sullivan  <sullivan@apple.com>

        Reviewed by Anders

        - WebKit part of fix for:
        <rdar://problem/5128697> REGRESSION: At least one PDF context menu item isn't appearing on Leopard

        * Misc/WebNSArrayExtras.h: Added.
        * Misc/WebNSArrayExtras.m: Added.
        (-[NSMutableArray _webkit_removeUselessMenuItemSeparators]):
        New file, includes this method to strip leading, trailing, and duplicate separators from arrays
        of NSMenuItems (copied from Safari)

        * WebView/WebUIDelegatePrivate.h:
        new MenuItemTag enum values for new PDFKit context menu items
